--- a/_posts/2016-10-02-taiwan.md
+++ b/_posts/2016-10-02-taiwan.md
@@ -9,7 +9,51 @@ image     : /assets/article_images/taiwan/IMG_0134.JPG
 ---
 题图为台北车站。环岛台湾，搭乘飞机而来，坐过人性化的台铁和高铁，特意品尝了具有几十年传统的台铁便当；也感受过台北捷运，办了一张很萌很台湾的悠游卡，假装当地人。还乘坐了台湾东部不太方便的公共交通，等公交的时候“聆听”当地老伯讲政治......一直在路上，在不同的交通工具中，用心来感受台湾，慢慢喜欢上这个地方。
 
+airbnb上预定的住宿，居住环境怡人
+![image](/assets/article_images/taiwan/FullSizeRender 4.jpg)
 成群的机车党
+![image](/assets/article_images/taiwan/FullSizeRender 10.jpg)
 ![image](/assets/article_images/taiwan/IMG_0132.JPG)
 中正纪念堂。纪念堂大广场里，有一群练街舞的学生
 ![image](/assets/article_images/taiwan/IMG_0140.JPG)
+巴洛克式建筑-总统府
+![image](/assets/article_images/taiwan/FullSizeRender 5.jpg)
+![image](/assets/article_images/taiwan/IMG_0175.JPG)
+台北远景
+![image](/assets/article_images/taiwan/FullSizeRender 17.jpg)
+![image](/assets/article_images/taiwan/FullSizeRender 15.jpg)
+车流不息
+![image](/assets/article_images/taiwan/IMG_0751.JPG)
+肥前屋的秋刀鱼
+![image](/assets/article_images/taiwan/IMG_0179.JPG)
+地铁旁随便就可以买到新鲜美味的寿司
+![image](/assets/article_images/taiwan/IMG_0746.JPG)
+花莲的清水断崖
+![image](/assets/article_images/taiwan/FullSizeRender 6.jpg)
+太鲁阁
+![image](/assets/article_images/taiwan/IMG_0305.JPG)
+七星潭边作画的画家
+![image](/assets/article_images/taiwan/IMG_6530.JPG)
+绿岛
+![image](/assets/article_images/taiwan/FullSizeRender 11.jpg)
+![image](/assets/article_images/taiwan/FullSizeRender 16.jpg)
+![image](/assets/article_images/taiwan/IMG_0503.JPG)
+![image](/assets/article_images/taiwan/IMG_0484.JPG)
+到垦丁这一天刚下过雨，天气反而舒爽，骑着机车慕名去后壁湖吃生鱼片
+![image](/assets/article_images/taiwan/FullSizeRender 18.jpg)
+垦丁渔港生鱼片
+![image](/assets/article_images/taiwan/FullSizeRender 13.jpg)
+鹅銮鼻公园，已经接近台湾最南点了
+![image](/assets/article_images/taiwan/FullSizeRender 14.jpg)
+海生馆
+![image](/assets/article_images/taiwan/IMG_0616.JPG)
+台南
+![image](/assets/article_images/taiwan/FullSizeRender 7.jpg)
+担仔面
+![image](/assets/article_images/taiwan/FullSizeRender 8.jpg)
+路旁小学
+![image](/assets/article_images/taiwan/FullSizeRender 9.jpg)
+孔庙旁小店的美食
+![image](/assets/article_images/taiwan/IMG_0690.JPG)
+台中-东海大学，贝聿铭的设计
+![image](/assets/article_images/taiwan/IMG_0728.JPG)
