--- a/_posts/2016-10-02-taiwan.md
+++ b/_posts/2016-10-02-taiwan.md
@@ -7,30 +7,32 @@ categories: blog
 tags      :
 image     : /assets/article_images/taiwan/IMG_0134.JPG
 ---
-题图为台北车站。环岛台湾，搭乘飞机而来，坐过人性化的台铁和高铁，特意品尝了具有几十年传统的台铁便当；也感受过台北捷运，办了一张很萌很台湾的悠游卡，假装当地人。还乘坐了台湾东部不太方便的公共交通，等公交的时候“聆听”当地老伯讲政治......一直在路上，在不同的交通工具中，用心来感受台湾，慢慢喜欢上这个地方。
+题图为台北车站。环岛台湾，搭乘飞机而来，坐过人性化的台铁和高铁，特意品尝了具有几十年传统的台铁便当；也感受过台北捷运，办了一张很萌很台湾的悠游卡，假装当地人。还乘坐了台湾东部不太方便的公共交通，等公交的时候“聆听”当地老伯讲政治......一直在路上，通过不同的搭乘方式，感受台湾的方方面面。
 
-airbnb上预定的住宿，居住环境怡人
+airbnb上预定的南港住宿，房东非常热情周到。她说经常来广州，会因为台湾口音被认出是台湾人。“我的口音有那么明显么？”
 ![image](/assets/article_images/taiwan/FullSizeRender 4.jpg)
 成群的机车党
-![image](/assets/article_images/taiwan/FullSizeRender 10.jpg)
 ![image](/assets/article_images/taiwan/IMG_0132.JPG)
+
 中正纪念堂。纪念堂大广场里，有一群练街舞的学生
+![image](/assets/article_images/taiwan/FullSizeRender 10.jpg)
 ![image](/assets/article_images/taiwan/IMG_0140.JPG)
 巴洛克式建筑-总统府
 ![image](/assets/article_images/taiwan/FullSizeRender 5.jpg)
+101大楼，声名在外，我却认为远没有总统府和中正纪念堂的建筑美好。
 ![image](/assets/article_images/taiwan/IMG_0175.JPG)
-台北远景
+站在猫空上眺望台北远景，101大楼直入天际，映入眼帘。
 ![image](/assets/article_images/taiwan/FullSizeRender 17.jpg)
 ![image](/assets/article_images/taiwan/FullSizeRender 15.jpg)
 车流不息
 ![image](/assets/article_images/taiwan/IMG_0751.JPG)
 肥前屋的秋刀鱼
 ![image](/assets/article_images/taiwan/IMG_0179.JPG)
-地铁旁随便就可以买到新鲜美味的寿司
+地铁旁随便就可以买到便宜，新鲜且美味的寿司
 ![image](/assets/article_images/taiwan/IMG_0746.JPG)
 花莲的清水断崖
 ![image](/assets/article_images/taiwan/FullSizeRender 6.jpg)
-太鲁阁
+太鲁阁的美景宛如唐宋时期的山水画。假装在问道。
 ![image](/assets/article_images/taiwan/IMG_0305.JPG)
 七星潭边作画的画家
 ![image](/assets/article_images/taiwan/IMG_6530.JPG)
