--- a/_posts/2015-03-05-JVM的工作原理，层次结构以及GC工作原理.md
+++ b/_posts/2015-03-05-JVM的工作原理，层次结构以及GC工作原理.md
@@ -1,8 +1,16 @@
+---
+layout    : post
+title     : JVM以及垃圾回收器的工作原理
+date      : 2015-03-05
+author    : GSM
+categories: blog
+tags      : Java
+image     : /assets/article_images/2016-10-17.jpg
+---
+
 虽是读书笔记，但是如转载请注明出处.
 
 ----------
-
-
 # JVM
 
 Java 虚拟机 Java 虚拟机（Java virtual machine，JVM）是运行 Java 程序必不可少的机制。JVM实现了Java语言最重要的特征：即平台无关性。原理：编译后的 Java 程序指令并不直接在硬件系统的 CPU 上执行，而是由 JVM 执行。JVM屏蔽了与具体平台相关的信息，使Java语言编译程序只需要生成在JVM上运行的目标字节码（.class）,就可以在多种平台上不加修改地运行。Java 虚拟机在执行字节码时，把字节码解释成具体平台上的机器指令执行。因此实现java平台无关性。它是 Java 程序能在多平台间进行无缝移植的可靠保证，同时也是 Java 程序的安全检验引擎（还进行安全检查）。 
@@ -20,7 +28,7 @@ classloader 把硬盘上的class 文件加载到JVM中的运行时数据区域, 
 
 ----------
 
-##classloader 
+## classloader 
 作用：装载.class文件
 classloader 有两种装载class的方式 （时机）：
 1. 隐式：运行过程中，碰到new方式生成对象时，隐式调用classLoader到JVM
@@ -57,12 +65,9 @@ AppClass Loader
 这是JVM分工自治生态系统的一个很好的体现。
 
 
-
-httpwww.importnew.com6581.html
-
+引用：http://www.importnew.com6581.html
 
 ----------
-
 
 ## 执行引擎
 作用： 执行字节码，或者执行本地方法
