--- a/_posts/2016-10-02-taiwan.md
+++ b/_posts/2016-10-02-taiwan.md
@@ -1,12 +1,14 @@
 ---
 layout    : post
-title     : Taiwan - 台湾环岛（台北-花莲-绿岛-垦丁-台南-台中-台北）
+title     : Taiwan - 台湾环岛
 date      : 2016-06-14
 author    : Dream
 categories: blog
 tags      :
 image     : /assets/article_images/taiwan/IMG_0134.JPG
 ---
+_ 「台北-花莲-绿岛-垦丁-台南-台中-台北」_
+
 题图为台北车站。环岛台湾，搭乘飞机而来，坐过人性化的台铁和高铁，特意品尝了具有几十年传统的台铁便当；也感受过台北捷运，办了一张很萌很台湾的悠游卡，假装当地人。还乘坐了台湾东部不太方便的公共交通，等公交的时候“聆听”当地老伯讲政治......一直在路上，通过不同的搭乘方式，感受台湾的方方面面。
 
 airbnb上预定的南港住宿，房东非常热情周到。她说经常来广州，会因为台湾口音被认出是台湾人。“我的口音有那么明显么？”
