--- a/_posts/2015-03-05-JVM以及垃圾回收器的工作原理.md
+++ b/_posts/2015-03-05-JVM以及垃圾回收器的工作原理.md
@@ -192,12 +192,12 @@ Java中那些`不可达的对象`就会变成`垃圾`。那么什么叫做不可
 
 例如： 
 (1)改变对象的引用，如置为null或者指向其他对象。 
-  
+```java
   Object x=new Object();object1 
   Object y=new Object();object2 
   x=y;object1 变为垃圾 
   x=y=null;object2 变为垃圾 
-
+```
 (2)超出作用域 
   
   if(i==0){ 
@@ -215,16 +215,16 @@ Java中那些`不可达的对象`就会变成`垃圾`。那么什么叫做不可
   
 (4)线程中的垃圾 
   
-   class A implements Runnable{   
-     void run(){ 
+  class A implements Runnable{   
+    void run(){ 
        .... 
      } 
-   } 
-   main 
-   A x=new A();object1 
-   x.start(); 
-   x=null;//等线程执行完后object1才被认定为垃圾 
-   这样看，确实在代码执行过程中会产生很多垃圾，不过不用担心，java可以有效地处理他们。
+  } 
+  main 
+  A x=new A();object1 
+  x.start(); 
+  x=null;//等线程执行完后object1才被认定为垃圾 
+  这样看，确实在代码执行过程中会产生很多垃圾，不过不用担心，java可以有效地处理他们。
   
 ----------
 
