--- a/_posts/2015-05-14-Hive 源码解析之 Hive 基本框架和执行入口.md
+++ b/_posts/2015-05-14-Hive 源码解析之 Hive 基本框架和执行入口.md
@@ -1,6 +1,6 @@
 ---
 layout    : post
-title     : JVM以及垃圾回收器的工作原理
+title     : Hive 源码解析之 Hive 基本框架和执行入口
 date      : 2015-05-14
 author    : NX
 categories: blog
