--- a/_posts/2015-05-14-Hive源码解析之Hive基本框架和执行入口.md
+++ b/_posts/2015-05-14-Hive源码解析之Hive基本框架和执行入口.md
@@ -350,7 +350,6 @@ private void printHeader(Driver qp, PrintStream out) {
 ![Õº∆¨√Ë ˆ][3]
 
 
-  [1]: assets\article_images\techarticles\hive1.png
-  [2]: assets\article_images\techarticles\hive2.png
+  [1]: /assets/article_images/techarticles/hive1.png
+  [2]: /assets/article_images/techarticles/hive2.png
   [3]: /assets/article_images/alipay.jpg "÷ß∏∂±¶"
-  
