--- a/_posts/2016-12-12-Nginx配置反向代理服务器.md
+++ b/_posts/2016-12-12-Nginx配置反向代理服务器.md
@@ -28,6 +28,7 @@ _ 「Nginx」_
 一个反向代理服务器通常具有的功能 ： 负载均衡 + 反向代理 + 页面缓存
 
 ---
+
 ### 1. 负载均衡
 upstream是Nginx的HTTP Upstream模块，这个模块通过一个简单的调度算法来实现客户端IP到后端服务器的负载均衡。
 
@@ -90,8 +91,11 @@ Nginx会将上游服务器的响应转发给客户端，但默认不会转发以
   - proxy_cache_valid：为不同的响应状态码设置不同的缓存时间
   - proxy_store：开启将文件保存到磁盘上的功能
   - proxy_store_access: 设置缓存目录和文件的访问权限
---------------------------------------------------------------------------------
-配置文件
+  
+----
+
+###　配置文件
+
 ```
 #user  nobody;
 worker_processes  1;
@@ -101,10 +105,9 @@ worker_processes  1;
 events {
     worker_connections  1024;
 }
-
 http {
     proxy_buffering on;
-    
+
      #在日志格式中加入$upstream_cache_status
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent $request_body "$http_referer" '
@@ -183,10 +186,10 @@ http {
         }
     }
 }
+
 ```
 
---------------------------------------------------------------------------------
-
+----
 
 ### 参考
 
